--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "babel-eslint": "^10.0.2",
     "electron-reload": "^1.4.1",
+    "emoji.json": "^12.1.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-json": "^1.4.0",
